<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@android:color/holo_green_dark">

    <EditText
        android:id="@+id/taskTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextHint"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:id="@+id/intervalCountView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/taskTextField"
        android:hint="Type interval count here..."
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"/>
    <RadioGroup
        android:layout_below="@id/intervalCountView"
        android:id="@+id/timeIntervalGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="17dp">

            <TextView
                android:id="@+id/selectTimeIntervalView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/select_interval_time" />


            <RadioButton
                android:id="@+id/firstButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:text="25"
                android:textSize="25sp"
                android:layout_marginStart="20dp"/>

            <RadioButton
                android:id="@+id/secondButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:text="45"
                android:textSize="25sp"
                android:layout_marginStart="40dp"/>

        </LinearLayout>


    </RadioGroup>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeIntervalGroup"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addButtonText"
            android:layout_marginStart="15dp"/>
        <Button
            android:id="@+id/delButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delButtonText"
            android:layout_marginLeft="30dp"/>
        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearButtonText"
            android:layout_marginStart="30dp" />

    </LinearLayout>
    <TextView
        android:id="@+id/testTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLayout"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/testTextView"
        tools:listitem="@layout/single_recyclerview_item"/>

</RelativeLayout>